--- a/public/client-dashboard.html
+++ b/public/client-dashboard.html
@@ -51,7 +51,7 @@
                 <div class="card shadow">
                     <img src="https://d2s82a7atsifww.cloudfront.net/articles/content/807697e9c67d745079fe9475a87dce4c_officemanagerH.png" class="card-img-top" alt="Job Manager">
                     <div class="card-body d-flex justify-content-center">
-                        <a href="find-work.html" class="btn btn-dark px-5">Find Work</a>
+                        <a href="Job-manager.html" class="btn btn-dark px-5">Job Manager</a>
                     </div>
                 </div>
             </div>
