--- a/public/client-kyc.html
+++ b/public/client-kyc.html
@@ -59,50 +59,50 @@
             <div class="row mb-4">
                 <div class="col-md-10">
                     <label for="txtEmail" class="form-label">Client ID</label>
-                    <input required type="email" class="form-control" id="txtEmail" name="txtEmail" readonly>
+                    <input type="email" class="form-control" id="txtEmail" name="txtEmail" readonly>
                 </div>
                 <div class="col-md-2 d-flex align-items-end">
-                    <input required type="button" class="btn btn-dark" value="Fetch" id="fetch">
+                    <input type="button" class="btn btn-dark" value="Fetch" id="fetch">
                 </div>
             </div>
 
             <div class="row mb-4">
                 <div class="col-md-5">
                     <label for="txtName" class="form-label">Name</label>
-                    <input required type="text" class="form-control" id="txtName" name="txtName">
+                    <input type="text" class="form-control" id="txtName" name="txtName" required>
                 </div>
                 <div class="col-md-5">
                     <label for="txtContact" class="form-label">Contact</label>
-                    <input required type="number" class="form-control" id="txtContact" name="txtContact">
+                    <input type="number" class="form-control" id="txtContact" name="txtContact" required>
                 </div>
             </div>
 
             <div class="row mb-4">
                 <div class="col-md-5">
                     <label for="firm" class="form-label">Firm/Business</label>
-                    <input required type="text" class="form-control" id="firm" name="firm">
+                    <input type="text" class="form-control" id="firm" name="firm" required>
                 </div>
                 <div class="col-md-5">
                     <label for="business" class="form-label">Business Profile</label>
-                    <input required type="text" class="form-control" id="business" name="business">
+                    <input type="text" class="form-control" id="business" name="business" required>
                 </div>
             </div>
 
             <div class="row mb-4">
                 <div class="col-md-5">
                     <label for="txtAddress" class="form-label">Address</label>
-                    <input required type="text" class="form-control" id="txtAddress" name="txtAddress">
+                    <input type="text" class="form-control" id="txtAddress" name="txtAddress" required>
                 </div>
                 <div class="col-md-5">
                     <label for="txtCity" class="form-label">City</label>
-                    <input required type="text" class="form-control" id="txtCity" name="txtCity">
+                    <input type="text" class="form-control" id="txtCity" name="txtCity" required>
                 </div>
             </div>
 
             <div class="row mb-4">
                 <div class="col-md-5">
                     <label for="idtype" class="form-label">Select ID Type:</label>
-                    <select name="idtype" id="idtype" class="form-select">
+                    <select name="idtype" id="idtype" class="form-select" required>
                         <option value="none">Select</option>
                         <option value="Adhaar Card">Adhaar Card</option>
                         <option value="Pan Card">Pan Card</option>
@@ -113,7 +113,7 @@
                 </div>
                 <div class="col-md-5">
                     <label for="idnumber" class="form-label">ID Proof Number</label>
-                    <input required type="text" class="form-control" id="idnumber" name="idnumber">
+                    <input type="text" class="form-control" id="idnumber" name="idnumber" required>
                 </div>
             </div>
 
