--- a/public/vol-dashboard.html
+++ b/public/vol-dashboard.html
@@ -39,9 +39,9 @@
             
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
                 <div class="card shadow">
-                    <img src="https://d2s82a7atsifww.cloudfront.net/articles/content/807697e9c67d745079fe9475a87dce4c_officemanagerH.png" class="card-img-top" alt="Job Manager">
+                    <img src="https://img.freepik.com/free-photo/business-meeting-talking-about-job_53876-94836.jpg" class="card-img-top py-3" alt="Job Manager">
                     <div class="card-body d-flex justify-content-center">
-                        <a href="volunteer-manager.html" class="btn btn-dark px-5">Volunteer Manager</a>
+                        <a href="find-work.html" class="btn btn-dark px-5">Find Work</a>
                     </div>
                 </div>
             </div>
