--- a/public/Job-manager.html
+++ b/public/Job-manager.html
@@ -1,67 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Job Manager</title>
-    <link rel="icon" type="image/x-icon" href="https://media.istockphoto.com/id/1399229336/vector/homeless-man-on-street-businessmen.jpg?s=612x612&w=0&k=20&c=uL7nSHRWT-K160Nfh8WgRGjAIbiUwPlGCzec0zVYHPw=">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.3/angular.min.js"></script>
     <script>
-        function init(){
-            let activeUser= localStorage.getItem("activeUser")
-            document.getElementById("txtxEmail").value=activeUser;
-        }
-    </script>
-    <script>
         let module = angular.module("myModule", []);
         module.controller("myController", function ($scope, $http) {
-            $scope.JsonAry = [];
-            $scope.selEmail = ""; 
+            $scope.selEmail = "";
             $scope.allrecords = [];
             $scope.errorMessage = "";
 
-            $scope.fetchemail = function () {
-                let url = "/email-records";
-                $http.get(url).then(function (response) {
-                    $scope.JsonAry = response.data;
-                }, function (err) {
-                    console.error(err);
-                    $scope.errorMessage = "Error fetching email records: " + err.data;
-                });
+            // Automatically set email from localStorage
+            $scope.initEmail = function () {
+                let activeUser = localStorage.getItem("activeUser");
+                if (activeUser) {
+                    $scope.selEmail = activeUser;
+                }
             };
 
+            // Fetch jobs based on email
             $scope.searchjob = function () {
-           
+                if (!$scope.selEmail) {
+                    $scope.errorMessage = "No email found in localStorage.";
+                    return;
+                }
+
                 let url = `/job-search-email?cid=${$scope.selEmail}`;
                 $http.get(url).then(function (response) {
                     $scope.allrecords = response.data;
-                    if ($scope.allrecords.length === 0) {
-                        $scope.errorMessage = "No jobs found for the entered email.";
-                    } else {
-                        $scope.errorMessage = "";
-                    }
+                    $scope.errorMessage = $scope.allrecords.length === 0 ? "No jobs found for this email." : "";
                 }, function (err) {
                     console.error(err);
                     $scope.errorMessage = "Error searching for jobs: " + err.data;
                 });
             };
 
-            $scope.doShowDetails = function (index) {
+            // Show job details
+            $scope.doShowDetails = function(index) {
                 $scope.selObj = $scope.allrecords[index];
             };
 
+            // Delete job
             $scope.deleteJob = function (jobid) {
-                let confirmDelete = confirm("Are you sure you want to delete this job?");
-                if (confirmDelete) {
+                if (confirm("Are you sure you want to delete this job?")) {
                     let url = `/do-delete?jobid=${jobid}`;
                     $http.get(url).then(function (response) {
                         alert(response.data);
-                        $scope.searchjob();
+                        $scope.searchjob(); // Refresh job list
                     }, function (err) {
                         console.error(err);
                         $scope.errorMessage = "Error deleting job: " + err.data;
@@ -69,12 +60,12 @@
                 }
             };
 
-            $scope.fetchemail();
+            $scope.initEmail(); // Set email on page load
         });
     </script>
 </head>
 
-<body ng-app="myModule" ng-controller="myController" onload="init()">
+<body ng-app="myModule" ng-controller="myController">
     <div class="p-3 mb-3 bg-dark text-white text-center">
         <h5>www.panhadlers.com</h5>
     </div>
@@ -82,8 +73,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 p-4 border rounded shadow-sm bg-white">
-                <label for="emailselect" class="form-label">Email:</label>
-                <input type="email" name="txtxEmail" id="txtxEmail" ng-model="selEmail" class="form-control" disabled>
+                <label for="emailinput" class="form-label">Your Email:</label>
+                <input type="email" id="emailinput" class="form-control" ng-model="selEmail" readonly>
 
                 <div class="d-flex justify-content-center mt-4 mb-3">
                     <button class="btn btn-dark px-5" ng-click="searchjob()">Search</button>
@@ -93,17 +84,12 @@
             </div>
 
             <div class="col-md-8">
-                <!-- <div ng-if="allrecords.length === 0 && !errorMessage" class="text-center">
-                    <p>No jobs available for the entered email. Please adjust your search criteria.</p>
-                </div> -->
-
                 <div ng-repeat="job in allrecords" class="mb-4">
                     <div class="card shadow-sm">
                         <div class="card-body">
                             <h5 class="card-title">{{ job.jobtitle }}</h5>
                             <p class="card-text">City: {{ job.city }}<br>Address: {{ job.address }}<br>Owner: {{ job.cid }}</p>
                             <button class="btn btn-dark" ng-click="doShowDetails($index);" data-bs-toggle="modal" data-bs-target="#modalopen">More Info...</button>
-
                             <button type="button" class="btn btn-danger float-end" ng-click="deleteJob(job.jobid)">Delete</button>
                         </div>
                     </div>
@@ -120,38 +106,14 @@
                     </div>
                     <div class="modal-body">
                         <table>
-                            <tr>
-                                <td>Client ID:</td>
-                                <td>{{ selObj.cid }}</td>
-                            </tr>
-                            <tr>
-                                <td>Job ID:</td>
-                                <td>{{ selObj.jobid }}</td>
-                            </tr>
-                            <tr>
-                                <td>Job Title:</td>
-                                <td>{{ selObj.jobtitle }}</td>
-                            </tr>
-                            <tr>
-                                <td>City:</td>
-                                <td>{{ selObj.city }}</td>
-                            </tr>
-                            <tr>
-                                <td>Address:</td>
-                                <td>{{ selObj.address }}</td>
-                            </tr>
-                            <tr>
-                                <td>Contact:</td>
-                                <td>{{ selObj.contact }}</td>
-                            </tr>
-                            <tr>
-                                <td>Job Type:</td>
-                                <td>{{ selObj.jobtype }}</td>
-                            </tr>
-                            <tr>
-                                <td>Education:</td>
-                                <td>{{ selObj.education ? 'Yes' : 'No' }}</td>
-                            </tr>
+                            <tr><td>Client ID:</td><td>{{ selObj.cid }}</td></tr>
+                            <tr><td>Job ID:</td><td>{{ selObj.jobid }}</td></tr>
+                            <tr><td>Job Title:</td><td>{{ selObj.jobtitle }}</td></tr>
+                            <tr><td>City:</td><td>{{ selObj.city }}</td></tr>
+                            <tr><td>Address:</td><td>{{ selObj.address }}</td></tr>
+                            <tr><td>Contact:</td><td>{{ selObj.contact }}</td></tr>
+                            <tr><td>Job Type:</td><td>{{ selObj.jobtype }}</td></tr>
+                            <tr><td>Education:</td><td>{{ selObj.education ? 'Yes' : 'No' }}</td></tr>
                         </table>
                     </div>
                     <div class="modal-footer">
@@ -162,5 +124,4 @@
         </div>
     </div>
 </body>
-
 </html>
