--- a/public/Post-job.html
+++ b/public/Post-job.html
@@ -59,7 +59,7 @@
             <div class="row mb-4">
                 <div class="col-md-10">
                     <label for="txtEmail" class="form-label">Client ID</label>
-                    <input type="email" class="form-control" id="txtEmail" name="txtEmail" aria-describedby="emailHelp" required>
+                    <input type="email" class="form-control" id="txtEmail" name="txtEmail" aria-describedby="emailHelp" readonly required>
                 </div>
                 <div class="col-md-2 d-flex align-items-end">
                     <input type="button" class="btn btn-dark" value="Fetch" id="fetch">
