--- a/public/index.html
+++ b/public/index.html
@@ -348,10 +348,11 @@
               <h6 class="card-title text-center">Developed By:</h6>
               <div class="card-body d-flex align-items-center">
               <div>
-                <img src="https://karankks-1436.web.app/KKS.jpeg" alt="Karan Kumar" class="img-fluid rounded-circle" height="100px" width="100px">
+                <img src="mypic.jpg" alt="Karan Kumar" class="img-fluid rounded-circle" height="100px" width="100px">
               </div>
               <div>
-                <h5 class="card-text mx-5">~Karan Kumar</h5>      
+                <h5 class="card-text mx-5">~Karan Kumar</h5>  
+                  <h6 class="card-text mx-5">Web Developer</h6>  
               </div>
             </div>
             </div>
@@ -369,7 +370,8 @@
                 
               </div>
               <div>
-                <h5 class="card-text mx-5">~Rajesh Bansal</h5>      
+                <h5 class="card-text mx-5">~Rajesh Bansal</h5>  
+                  <h6 class="card-text mx-5">Author of Real Java</h6>  
               </div>
             </div>
             </div>
