--- a/public/index.html
+++ b/public/index.html
@@ -348,7 +348,7 @@
               <h6 class="card-title text-center">Developed By:</h6>
               <div class="card-body d-flex align-items-center">
               <div>
-                <img src="mypic.jpg" alt="Karan Kumar" class="img-fluid rounded-circle" height="100px" width="100px">
+                <img src="https://karanks--1436.web.app/karanks1436.jpg" alt="Karan Kumar" class="img-fluid rounded-circle" height="100px" width="100px">
               </div>
               <div>
                 <h5 class="card-text mx-5">~Karan Kumar</h5>  
