--- a/public/Post-job.html
+++ b/public/Post-job.html
@@ -2,139 +2,242 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Post Job</title>
-    <meta name="google-adsense-account" content="ca-pub-7210368865406744">
-    <link rel="icon" type="image/x-icon" href="https://media.istockphoto.com/id/1399229336/vector/homeless-man-on-street-businessmen.jpg?s=612x612&w=0&k=20&c=uL7nSHRWT-K160Nfh8WgRGjAIbiUwPlGCzec0zVYHPw=">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.3/angular.min.js"></script>
-    <script>
-           function init(){
-            let activeUser= localStorage.getItem("activeUser")
-            document.getElementById("txtEmail").value=activeUser;
-        }
-    </script>
-    <script>
-        $(document).ready(function () {
-            $("#fetch").click(function () {
-                let obj = {
-                    type: "get",
-                    url: "/fetchclientpost",
-                    data: {
-                        txtEmail: $("#txtEmail").val(),
-                    }
-                }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Post Job - Panhadlers</title>
+  <meta name="google-adsense-account" content="ca-pub-7210368865406744" />
+  <link rel="icon" href="https://media.istockphoto.com/id/1399229336/vector/homeless-man-on-street-businessmen.jpg?s=612x612&w=0&k=20&c=uL7nSHRWT-K160Nfh8WgRGjAIbiUwPlGCzec0zVYHPw=" type="image/x-icon" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
 
-                // Sending AJAX Call
-                $.ajax(obj)
-                    .then(function (responseInJsonAry) {
-                        if (responseInJsonAry.length == 0)
-                            alert("Invalid Email Id / Password");
-                        else {
-                            alert(JSON.stringify(responseInJsonAry));
-                            $("#jobtitle").val(responseInJsonAry[0].jobtitle);
-                            $("#contact").val(responseInJsonAry[0].contact.substr(0, 10));
-                            $("#firmaddr").val(responseInJsonAry[0].address);
-                            $("#city").val(responseInJsonAry[0].city);
-                            $("#edu").val(responseInJsonAry[0].edu);
-                        }
-                    }).fail(function (err) {
-                        alert(err.message);
-                    });
-            });
-        });
-    </script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.3/angular.min.js"></script>
+
+  <style>
+    /* Body & font */
+    body {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background: #f9fafb;
+      color: #333;
+      min-height: 100vh;
+    }
+
+    /* Header */
+    .header {
+      background: #1e293b;
+      padding: 1rem 0;
+      box-shadow: 0 2px 4px rgb(0 0 0 / 0.1);
+    }
+
+    .header h5 {
+      margin: 0;
+      font-weight: 600;
+      letter-spacing: 1px;
+      color: #e2e8f0;
+      user-select: none;
+    }
+
+    /* Form container */
+    .form-container {
+      max-width: 720px;
+      margin: 3rem auto;
+      background: #fff;
+      padding: 3rem 3rem 2rem;
+      border-radius: 12px;
+      box-shadow: 0 8px 24px rgb(0 0 0 / 0.1);
+      border: 1px solid #e2e8f0;
+      transition: box-shadow 0.3s ease-in-out;
+    }
+
+    .form-container:hover {
+      box-shadow: 0 12px 40px rgb(0 0 0 / 0.15);
+    }
+
+    /* Form labels */
+    label {
+      font-weight: 600;
+      color: #334155;
+      margin-bottom: 0.35rem;
+      display: block;
+      letter-spacing: 0.03em;
+    }
+
+    /* Form controls */
+    input.form-control,
+    select.form-select {
+      border: 1.5px solid #cbd5e1;
+      border-radius: 8px;
+      padding: 0.5rem 0.75rem;
+      font-size: 1rem;
+      transition: border-color 0.3s ease;
+      box-shadow: none;
+    }
+
+    input.form-control:focus,
+    select.form-select:focus {
+      border-color: #3b82f6;
+      box-shadow: 0 0 6px rgba(59, 130, 246, 0.4);
+      outline: none;
+    }
+
+    /* Radio buttons */
+    .form-check-label {
+      font-weight: 500;
+      color: #475569;
+    }
+
+    /* Button */
+    .btn-dark {
+      background-color: #334155;
+      border: none;
+      padding: 0.5rem 1.5rem;
+      font-weight: 600;
+      letter-spacing: 0.05em;
+      transition: background-color 0.3s ease;
+      border-radius: 8px;
+    }
+
+    .btn-dark:hover,
+    .btn-dark:focus {
+      background-color: #1e293b;
+      box-shadow: 0 0 8px rgba(30, 41, 59, 0.6);
+    }
+
+    /* Responsive tweaks */
+    @media (max-width: 576px) {
+      .form-container {
+        padding: 2rem 1.5rem 1.5rem;
+      }
+
+      .btn-dark {
+        width: 100%;
+      }
+    }
+  </style>
+
+  <script>
+    function init() {
+      let activeUser = localStorage.getItem("activeUser");
+      if (activeUser) {
+        document.getElementById("txtEmail").value = activeUser;
+      }
+    }
+
+    $(document).ready(function () {
+      $("#fetch").click(function () {
+        let obj = {
+          type: "get",
+          url: "/fetchclientpost",
+          data: {
+            txtEmail: $("#txtEmail").val(),
+          },
+        };
+
+        $.ajax(obj)
+          .then(function (responseInJsonAry) {
+            if (responseInJsonAry.length == 0) alert("Invalid Email Id / Password");
+            else {
+              $("#jobtitle").val(responseInJsonAry[0].jobtitle);
+              $("#contact").val(responseInJsonAry[0].contact.substr(0, 10));
+              $("#firmaddr").val(responseInJsonAry[0].address);
+              $("#city").val(responseInJsonAry[0].city);
+              $("#edu").val(responseInJsonAry[0].edu);
+            }
+          })
+          .fail(function (err) {
+            alert(err.message);
+          });
+      });
+    });
+  </script>
 </head>
 
 <body ng-app="myModule" ng-controller="myController" onload="init()" ng-init="Fetchall()">
-    <div class="p-2 bg-dark">
-        <h5 class="text-center text-white">www.panhadlers.com</h5>
-    </div>
+  <header class="header">
+    <h5 class="text-center">www.panhadlers.com</h5>
+  </header>
 
-    <div class="container my-5">
-        <form class="border border-primary p-5 rounded shadow" method="post" action="/post-job">
-            <div class="row mb-4">
-                <div class="col-md-10">
-                    <label for="txtEmail" class="form-label">Client ID</label>
-                    <input type="email" class="form-control" id="txtEmail" name="txtEmail" aria-describedby="emailHelp" readonly required>
-                </div>
-                <div class="col-md-2 d-flex align-items-end">
-                    <input type="button" class="btn btn-dark" value="Fetch" id="fetch">
-                </div>
-            </div>
+  <main class="form-container">
+    <form method="post" action="/post-job" novalidate>
+      <div class="row mb-4 align-items-end">
+        <div class="col-md-10">
+          <label for="txtEmail" class="form-label">Client ID</label>
+          <input type="email" class="form-control" id="txtEmail" name="txtEmail" readonly required />
+        </div>
+        <div class="col-md-2 d-grid">
+          <button type="button" class="btn btn-dark" id="fetch">Fetch</button>
+        </div>
+      </div>
 
-            <div class="row mb-4">
-                <div class="col-md-5">
-                    <label for="jobtitle" class="form-label">Job Title</label>
-                    <select name="jobtitle" id="jobtitle" ng-change="doFilter()" class="form-select" ng-model="selEmail" required>
-                        <option value="">None</option>
-                        <option value="Sweeper">Sweeper</option>
-                        <option value="Cook">Cook</option>
-                        <option value="Driver">Driver</option>
-                        <option value="Gardener">Gardener</option>
-                        <option value="Care Taker">Care Taker</option>
-                        <option value="Painter">Painter</option>
-                    </select>
-                </div>
+      <div class="row mb-4">
+        <div class="col-md-5">
+          <label for="jobtitle" class="form-label">Job Title</label>
+          <select name="jobtitle" id="jobtitle" class="form-select" required>
+            <option value="">Select a job title</option>
+            <option value="Sweeper">Sweeper</option>
+            <option value="Cook">Cook</option>
+            <option value="Driver">Driver</option>
+            <option value="Gardener">Gardener</option>
+            <option value="Care Taker">Care Taker</option>
+            <option value="Painter">Painter</option>
+          </select>
+        </div>
 
-                <div class="col-md-5">
-                    <h6>Job Type</h6>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="jobType" id="part" value="Part Time">
-                        <label class="form-check-label" for="part">Part Time</label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="jobType" id="full" value="Full Time">
-                        <label class="form-check-label" for="full">Full Time</label>
-                    </div>
-                </div>
-            </div>
+        <div class="col-md-5 offset-md-1">
+          <label class="form-label d-block mb-2">Job Type</label>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="jobType" id="part" value="Part Time" required />
+            <label class="form-check-label" for="part">Part Time</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="jobType" id="full" value="Full Time" />
+            <label class="form-check-label" for="full">Full Time</label>
+          </div>
+        </div>
+      </div>
 
-            <div class="row mb-4">
-                <div class="col-md-5">
-                    <label for="firmaddr" class="form-label">Firm Address</label>
-                    <input type="text" class="form-control" id="firmaddr" name="firmaddr" aria-describedby="emailHelp" required>
-                </div>
+      <div class="row mb-4">
+        <div class="col-md-5">
+          <label for="firmaddr" class="form-label">Firm Address</label>
+          <input type="text" class="form-control" id="firmaddr" name="firmaddr" required />
+        </div>
 
-                <div class="col-md-5">
-                    <label for="city" class="form-label">City</label>
-                    <select name="city" id="city" ng-change="doFilter()" class="form-select" ng-model="selCity" required>
-                        <option value="">None</option>
-                        <option value="Bathinda">Bathinda</option>
-                        <option value="Ludhiana">Ludhiana</option>
-                        <option value="Patiala">Patiala</option>
-                        <option value="Delhi">Delhi</option>
-                        <option value="Banglore">Banglore</option>
-                        <option value="Chandigarh">Chandigarh</option>
-                    </select>
-                </div>
-            </div>
+        <div class="col-md-5 offset-md-1">
+          <label for="city" class="form-label">City</label>
+          <select name="city" id="city" class="form-select" required>
+            <option value="">Select city</option>
+            <option value="Bathinda">Bathinda</option>
+            <option value="Ludhiana">Ludhiana</option>
+            <option value="Patiala">Patiala</option>
+            <option value="Delhi">Delhi</option>
+            <option value="Banglore">Banglore</option>
+            <option value="Chandigarh">Chandigarh</option>
+          </select>
+        </div>
+      </div>
 
-            <div class="row mb-4">
-                <div class="col-md-5">
-                    <label for="edu" class="form-label">Education</label>
-                    <select name="edu" id="edu" class="form-select" required>
-                        <option value="none">Select</option>
-                        <option value="Yes">Yes</option>
-                        <option value="No">No</option>
-                    </select>
-                </div>
+      <div class="row mb-4">
+        <div class="col-md-5">
+          <label for="edu" class="form-label">Education</label>
+          <select name="edu" id="edu" class="form-select" required>
+            <option value="">Select</option>
+            <option value="Yes">Yes</option>
+            <option value="No">No</option>
+          </select>
+        </div>
 
-                <div class="col-md-5">
-                    <label for="contact" class="form-label">Contact Person</label>
-                    <input type="number" class="form-control" id="contact" name="contact" aria-describedby="emailHelp" required>
-                </div>
-            </div>
+        <div class="col-md-5 offset-md-1">
+          <label for="contact" class="form-label">Contact Person</label>
+          <input type="tel" class="form-control" id="contact" name="contact" maxlength="15" required />
+        </div>
+      </div>
 
-            <div class="d-flex justify-content-center">
-                <button type="submit" class="btn btn-dark mx-2 text-light fw-bold">Publish</button>
-            </div>
-        </form>
-    </div>
+      <div class="d-flex justify-content-center">
+        <button type="submit" class="btn btn-dark px-5 fw-bold">Publish</button>
+      </div>
+    </form>
+  </main>
 </body>
 
 </html>
